Issue #SB-12232 fix: single node alignment fixed

--- a/src/pages/collection-details-etb/collection-details-etb.scss
+++ b/src/pages/collection-details-etb/collection-details-etb.scss
@@ -118,7 +118,8 @@ page-collection-details-etb {
     .grey-icon-span
     {
       position: relative;
-      top : 4px;
+      top: 7px;
+      vertical-align: super;
     }
     .checkmark-icon
     {
